# option

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  clib.json  package.json
examples/: build.cmake  example.c  example_c11.c  example_immutable.c  example_mutable.c  example_option.c  example_result.c  main.c
sources/: immutable_option.c  immutable_option.h  mutable_option.c  option.c  option.h
src/: immutable_option.h  mutable_option.h  option.c  option.h
tests/unit/: build.cmake  describe.c  features.c  features.h
